chore(examples): fix filters buttons on mobile

--- a/examples/ecommerce/src/App.css
+++ b/examples/ecommerce/src/App.css
@@ -317,6 +317,7 @@ mark {
   font: inherit;
   margin-left: 1rem;
   margin-right: 0;
+  position: relative;
 }
 
 .ais-ToggleRefinement-checkbox:checked::before {
